# ChatReview

./: .gitignore  ideas.md  readme.md
backend/: .env  .gitignore  Cargo.toml  Dockerfile  README.md
backend/src/: auth.rs  chats.rs  main.rs  stats.rs
db/: create_db.sql
frontend/: .env  .gitignore  package.json  rsbuild.config.mjs  tsconfig.json
frontend/src/: App.vue  NotFound.vue  Router.vue  global.ts  index.css  index.html  index.js  root.vue  routes.js  routes.ts
frontend/src/components/: AsyncChatViewFromApi.vue  ChatCreator.vue  ChatEditor.vue  ChatMessage.vue  ChatView.vue  ChatViewFromApi.vue  ChatViewerWithDetails.vue  LoginView.vue  MessageActionPopup.vue  MessageDetails.vue  PasskeyListEntry.vue  PlatformStatistics.vue  StatGauge.vue  TopBar.vue
frontend/src/model/: chat.ts
frontend/src/pages/: AddPasskey.vue  ChatCreator.vue  ChatEditor.vue  ChatViewerById.vue  Feed.vue  LandingPage.vue  LoginView.vue  MyChats.vue  MyChatsAsync.vue  NewLayout.vue  Passkeys.vue  Profile.vue
svelte-frontend/: package-lock.json  package.json  svelte.config.js  vite.config.ts
svelte-frontend/src/: ChatMessage.svelte  ChatView.svelte  ChatViewerWithDetails.svelte  MessageDetails.svelte  PasskeyView.svelte  StatGauge.svelte  app.html
svelte-frontend/src/lib/: auth.ts  chat.ts  utils.ts
svelte-frontend/src/lib/state/: user.svelte.ts
svelte-frontend/src/routes/: +layout.svelte  +page.svelte
svelte-frontend/src/routes/feed/: +page.svelte  +page.ts
svelte-frontend/src/routes/login/: +page.svelte
svelte-frontend/src/routes/mychats/: +page.svelte  +page.ts
(+11 files in other folders)
