[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
dotenvy = "0.15.7"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.5", features = ["runtime-tokio", "tls-native-tls", "postgres", "macros", "uuid"] }
tokio = { version = "1.45.0", features = ["macros", "rt", "rt-multi-thread", "tokio-macros"] }
uuid = { version = "1.16.0", features = ["serde", "v4"] }
tower-http = { version = "0.6.4", features = ["cors"] }