[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["ws"]}
dotenvy = "0.15.7"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.5", features = ["runtime-tokio", "tls-rustls", "postgres", "macros", "uuid", "chrono"] }
tokio = { version = "1.45.0", features = ["macros", "rt", "rt-multi-thread", "tokio-macros", "sync"] }
uuid = { version = "1.16.0", features = ["serde", "v4"] }
tower-http = { version = "0.6.4", features = ["cors"] }
argon2 = "0.5.3"
jsonwebtoken = "9.3.1"
chrono = "0.4.34"
